# ratio

./: .gitignore  Anchor.toml  README.md  copy_idl.js  package.json
.toDelete/pool/: Cargo.toml
.toDelete/pool/src/: lib.rs
.toDelete/rd1/: lib-deposit.rs  lib-pool.rs  lib-withdraw.rs
.toDelete/rd2/: lib.rs  ratio.ts
.toDelete/rd3/: lib.rs  ratio.ts
.toDelete/rd4/: lib.rs  ratio.ts
.toDelete/rd5/: lib.rs  ratio.ts
.toDelete/rd5/utils/: index.ts
.toDelete/rd6/: lib.rs  ratio.ts
app/: idk.tsx  package.json  tsconfig.json
app/public/: index.html  main.ts  manifest.json
app/src/: App.css  App.tsx  NodeWalletCustom.ts  idl.json  idl.ts  index.tsx  mint_and_deposit_idl.json  ratio_idl.json  types.d.ts
app/src/components/: Balances.tsx  Body.tsx  DepositButton.tsx  Footer.tsx  MintElem.tsx  Navbar.tsx  RatioAppBar.tsx  WithdrawButton.tsx
app/src/components/balances/: PoolBalance.tsx  UserBalance.tsx
app/src/redux/: initState.ts  reducer.tsx  store.tsx  types.tsx
app/src/utils/: utils.ts
programs/mint-and-deposit/: Cargo.toml
programs/mint-and-deposit/src/: lib.rs
programs/ratio/: Cargo.toml
programs/ratio/src/: errors.rs  lib.rs  utils.rs
programs/ratio/src/contexts/: deposit.rs  init_pool.rs  init_state.rs  mint_and_deposit.rs  mint_to_pool.rs  mod.rs  withdraw.rs
programs/ratio/src/state/: ExchangeRedeemableForUsdc.rs  ExchangeUsdcForRedeemable.rs  PoolAccount.rs  mod.rs
programs/ratio/src/states/: states.rs
tests/: ratio.ts
tests/utils/: initializeState.ts  utils.ts
