[package]
name = "pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.2"
spl-token = { version = "3.2",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
